--- a/R_analysis/anova/NASA-TLX/tlx_average.Rmd
+++ b/R_analysis/anova/NASA-TLX/tlx_average.Rmd
@@ -40,7 +40,7 @@ task_df$auto_level <- factor(task_df$auto_level, levels = auto_levels_order)
 ######################### get mean and sd (or se) ######################### 
 task_df %>%
   group_by(auto_level, ring_id) %>%
-  get_summary_stats(average_mt, type = "mean_sd")
+  get_summary_stats(tlx_ave, type = "mean_sd")
 
 
 
@@ -66,7 +66,7 @@ task_df %>%
 #         strip.text.x = element_text(angle = 0, hjust = 0.5, size = 12), legend.position = "none")
 
 # ######################### cool box plot (courtesy of Sarah) #########################
-# ggplot(task_df,aes(x=auto_level,y=average_mt, fill=auto_level))+geom_boxplot(aes(fill=auto_level)) + labs( x = "auto_level", y = "average_mt", fill = "auto_level") +   theme_minimal() +
+# ggplot(task_df,aes(x=auto_level,y=tlx_ave, fill=auto_level))+geom_boxplot(aes(fill=auto_level)) + labs( x = "auto_level", y = "tlx_ave", fill = "auto_level") +   theme_minimal() +
 # stat_summary(fun = mean, geom = "point",size = 3, shape = 2, position = position_dodge(0.75), show.legend = FALSE) +
 # scale_fill_brewer(palette = "Set2") +
 #     theme(plot.title = element_text(size = 15, face = "bold"),
@@ -143,7 +143,7 @@ task_df %>%
 
 
 bxp <- ggboxplot(
-  task_df, x = "ring_id", y = "average_mt",
+  task_df, x = "ring_id", y = "tlx_ave",
   color = "auto_level", palette = "jco"
   )
 bxp
@@ -158,28 +158,28 @@ bxp
 ######################### check for outliers ######################### 
 task_df %>%
   group_by(auto_level, ring_id) %>%
-  identify_outliers(average_mt)
+  identify_outliers(tlx_ave)
 
 ######################### check normality ######################### 
 task_df %>%
   group_by(auto_level, ring_id) %>%
-  shapiro_test(average_mt)
+  shapiro_test(tlx_ave)
 
 ######################### plot normality ######################### 
-ggqqplot(task_df, "average_mt", ggtheme = theme_bw()) +
+ggqqplot(task_df, "tlx_ave", ggtheme = theme_bw()) +
   facet_grid(ring_id ~ auto_level, labeller = "label_both")
 
 
 ```
 
 
-## Fit ANOVA
+## Fit Model
 
 ```{r fit model}
 
 ######################### Two-way mixed ANOVA test #########################  
 res.aov <- anova_test(
-  data = task_df, dv = average_mt, wid = part_id,
+  data = task_df, dv = tlx_ave, wid = part_id,
   within = c(auto_level, ring_id)
   )
 get_anova_table(res.aov)
@@ -188,7 +188,7 @@ get_anova_table(res.aov)
 #################### Effect of auto_level for each ring_id #################### 
 one.way <- task_df %>%
   group_by(ring_id) %>%
-  anova_test(dv = average_mt, wid = part_id, within = auto_level) %>%
+  anova_test(dv = tlx_ave, wid = part_id, within = auto_level) %>%
   get_anova_table() %>%
   adjust_pvalue(method = "bonferroni")
 one.way
@@ -196,7 +196,7 @@ one.way
 #################### Effect of ring_id for each auto_level #################### 
 one.way <- task_df %>%
   group_by(auto_level) %>%
-  anova_test(dv = average_mt, wid = part_id, within = ring_id) %>%
+  anova_test(dv = tlx_ave, wid = part_id, within = ring_id) %>%
   get_anova_table() %>%
   adjust_pvalue(method = "bonferroni")
 one.way
@@ -206,7 +206,7 @@ one.way
 pwc <- task_df %>%
   group_by(ring_id) %>%
   pairwise_t_test(
-    average_mt ~ auto_level, paired = TRUE,
+    tlx_ave ~ auto_level, paired = TRUE,
     p.adjust.method = "bonferroni"
     )
 pwc
@@ -215,7 +215,7 @@ pwc
 pwc <- task_df %>%
   group_by(auto_level) %>%
   pairwise_t_test(
-    average_mt ~ ring_id, paired = TRUE,
+    tlx_ave ~ ring_id, paired = TRUE,
     p.adjust.method = "bonferroni"
     )
 pwc
@@ -228,7 +228,7 @@ pwc
 ```{r fit model}
 
 ###### fit linear mixed model 1 ######
-model <- lmer(average_mt ~ auto_num * fitts_id_num + (1 | part_id),
+model <- lmer(tlx_ave ~ auto_num * fitts_id_num + (1 | part_id),
               data = task_df)
 summary(model)
 
@@ -238,8 +238,19 @@ interact_plot(model, pred = fitts_id_num, modx = auto_num, interval = TRUE, int.
 interact_plot(model, pred = auto_num, modx = fitts_id_num, interval = TRUE, int.width = 0.8)
 
 
-```
+###### fit linear mixed model 2 ######
+fit <- lm(tlx_ave ~ fitts_id_num * auto_level, data = task_df)
+summary(fit)
 
+interact_plot(fit, pred = fitts_id_num, modx = auto_level, 
+              interval = TRUE, int.type = "confidence", int.width = .8,
+              # plot.points = TRUE,
+              x.label="Fitts ID", y.label="Averaged NASA-TLX", 
+              modx.labels = c("low", "med", "high")
+              )
+
+
+```
 
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
