all data processed

--- a/data/form/demo_analysis.ipynb
+++ b/data/form/demo_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,12 @@
     "from os import getcwd\n",
     "from numpy import average, var, std\n",
     "\n",
-    "NUM_PARTICIPANTS = 8"
+    "NUM_PARTICIPANTS = 24"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -147,23 +147,215 @@
        "      <td>1</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>24</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>23</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>11</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>25</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>25</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>13</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>24</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>14</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>22</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>15</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>23</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>16</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>37</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>17</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>18</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>18</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>23</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>21</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>22</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>23</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>23</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>23</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>24</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>23</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Q1 Q2 Q2_3_TEXT  Q3 Q4 Q5_1 Q5_2 Q5_3\n",
-       "0  1  1       NaN  24  1    5    2    3\n",
-       "1  2  2       NaN  21  1    4    7    1\n",
-       "2  3  1       NaN  24  1    5    5    1\n",
-       "3  4  2       NaN  27  1    6    6    2\n",
-       "4  5  2       NaN  20  1    5    7    3\n",
-       "5  6  2       NaN  21  1    7    3    6\n",
-       "6  7  2       NaN  25  1    4    5    1\n",
-       "7  8  1       NaN  19  1    3    1    6"
+       "    Q1 Q2 Q2_3_TEXT  Q3 Q4 Q5_1 Q5_2 Q5_3\n",
+       "0    1  1       NaN  24  1    5    2    3\n",
+       "1    2  2       NaN  21  1    4    7    1\n",
+       "2    3  1       NaN  24  1    5    5    1\n",
+       "3    4  2       NaN  27  1    6    6    2\n",
+       "4    5  2       NaN  20  1    5    7    3\n",
+       "5    6  2       NaN  21  1    7    3    6\n",
+       "6    7  2       NaN  25  1    4    5    1\n",
+       "7    8  1       NaN  19  1    3    1    6\n",
+       "8    9  1       NaN  24  1    5    4    2\n",
+       "9   10  1       NaN  23  1    5    7    4\n",
+       "10  11  2       NaN  25  1    6    5    2\n",
+       "11  12  1       NaN  25  1    4    1    7\n",
+       "12  13  1       NaN  24  1    6    1    1\n",
+       "13  14  1       NaN  22  1    6    6    6\n",
+       "14  15  1       NaN  23  3    7    7    7\n",
+       "15  16  2       NaN  37  1    6    6    4\n",
+       "16  17  1       NaN  19  1    5    6    1\n",
+       "17  18  1       NaN  18  1    7    4    4\n",
+       "18  19  1       NaN  20  1    5    1    5\n",
+       "19  20  1       NaN  23  1    6    1    1\n",
+       "20  21  1       NaN  30  1    5    5    3\n",
+       "21  22  2       NaN  23  1    6    3    6\n",
+       "22  23  1       NaN  23  1    3    2    4\n",
+       "23  24  2       NaN  23  1    7    1    1"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,14 +380,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Female = 3 (37.5%), Male = 5 (62.5%), Total = 8 participants\n"
+      "Female = 15 (62.5%), Male = 9 (37.5%), Total = 24 participants\n"
      ]
     }
    ],
@@ -211,14 +403,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average age = 22.6, Stdev = 2.6\n"
+      "Average age = 23.5, Stdev = 3.9\n"
      ]
     }
    ],
@@ -233,14 +425,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Right-handed = 8, Left-handed = 0, Either = 0\n"
+      "Right-handed = 23, Left-handed = 0, Either = 1\n"
      ]
     }
    ],
