--- a/data/form/demo_analysis.ipynb
+++ b/data/form/demo_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "      <td>16</td>\n",
        "      <td>2</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>37</td>\n",
+       "      <td>27</td>\n",
        "      <td>1</td>\n",
        "      <td>6</td>\n",
        "      <td>6</td>\n",
@@ -344,7 +344,7 @@
        "12  13  1       NaN  24  1    6    1    1\n",
        "13  14  1       NaN  22  1    6    6    6\n",
        "14  15  1       NaN  23  3    7    7    7\n",
-       "15  16  2       NaN  37  1    6    6    4\n",
+       "15  16  2       NaN  27  1    6    6    4\n",
        "16  17  1       NaN  19  1    5    6    1\n",
        "17  18  1       NaN  18  1    7    4    4\n",
        "18  19  1       NaN  20  1    5    1    5\n",
@@ -355,7 +355,7 @@
        "23  24  2       NaN  23  1    7    1    1"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -403,14 +403,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average age = 23.5, Stdev = 3.9\n"
+      "Average age = 23.0, Stdev = 2.7\n",
+      "(min, max) = (18, 30)\n"
      ]
     }
    ],
@@ -420,12 +421,17 @@
     "age_mean = average(age_list)\n",
     "age_var = var(age_list)\n",
     "age_std = std(age_list)\n",
-    "print(\"Average age = %.1f, Stdev = %.1f\" % (age_mean, age_std))"
+    "age_max = max(age_list)\n",
+    "age_min = min(age_list)\n",
+    "max_index = age_list.index(age_max)\n",
+    "min_index = age_list.index(age_min)\n",
+    "print(\"Average age = %.1f, Stdev = %.1f\" % (age_mean, age_std))\n",
+    "print(\"(min, max) = (%d, %d)\" % (age_min, age_max))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
